# Seeded-Image-Segmentation

./: .gitignore  README.md  mainwindow.ui
Qt Code/: engine.cpp  engine.h  icons.qrc  imglabel.cpp  imglabel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  matimage.cpp  matimage.h  photos.qrc  seededImgSeg.pro  utilities.cpp  utilities.h
build-seededImgSeg-Desktop_Qt_5_1_1_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-seededImgSeg-Desktop_Qt_5_1_1_MinGW_32bit-Debug/debug/: moc_imglabel.cpp  moc_mainwindow.cpp  qrc_icons.cpp
src/: CMakeLists.txt  seededImgSeg.pro  seededImgSegGUI.pro
src/apps/: CMakeLists.txt  CMakeLists.txt~  main.cpp
src/cmake/: buildTargets.cmake  buildTargets.cmake~  compilerDefOpt.cmake  findDependencies.cmake  findDependencies.cmake~
src/common/: CMakeLists.txt  CMakeLists.txt~  engine.cpp  engine.h  imglabel.cpp  imglabel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  utilities.cpp  utilities.h
src/tests/: CMakeLists.txt  CMakeLists.txt~
src/tests/unit/: CMakeLists.txt
src/tests/unit/common/: test_utilities.cpp  test_utilities.cpp~
